--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </section>
 
             <section class = "col-4 d-flex flex-column justify-content-around">
-                <div class = "rounded-circle bg-lightblue color-white" id = "bible-search">Bible Search</div>
+                <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle" id = "peers">Peers</div>
             </section>
