Applied the link button format to all the buttons.

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             </section>
 
             <section class = "col-4 d-flex flex-column justify-content-around">
-                <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "bible-search">Bible Search</div>
-                <div class = "rounded-circle" id = "reg-schedule">Regular Schedule</div>
-                <div class = "rounded-circle" id = "peers">Peers</div>
+                <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
+                <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
+                <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div>
             </section>
         </div>
     </div>
