--- a/index.html
+++ b/index.html
@@ -56,17 +56,39 @@
 
 
     <div class = "container">
+
         <div class = "row">
             <section class = "col-8">
                 <img src = "assets/images/placeholder.jpg" class = "img-fluid img-sizer" alt = "image">
             </section>
 
-            <section class = "col-4 d-flex flex-column justify-content-around">
+            <section class = "col-1"></section>
+
+            <section class = "col-3 d-flex flex-column justify-content-around">
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div>
             </section>
         </div>
+
+        <div class = "row space"></div>
+        <div class = "row space"></div>
+
+        <div class = "row">
+            <section class = "col-6">
+                <div class = "placeholder">Facebook Posts Will Go Here</div>
+            </section>
+
+            <section class = "col-6">
+                <div class = "placeholder">Facebook Events Will Go Here</div>
+            </section>
+        </div>
+
+
+
+
+
+
     </div>
 
 
