--- a/index.html
+++ b/index.html
@@ -84,6 +84,31 @@
             </section>
         </div>
 
+        <div class = "row space"></div>
+        <div class = "row space"></div>
+        <div class = "row space"></div>
+
+        <div class = "row">
+            <section class = "col-12">
+                <div class = "placeholder">Youtube Content Will Go Here</div>
+            </section>
+        </div>
+
+        <div class = "row space"></div>
+        <div class = "row space"></div>
+
+        <div class = "row">
+            <section class = "col-6">
+                <div class = "placeholder">Directions</div>
+            </section>
+
+            <section class = "col-6">
+                <div class = "placeholder">Contacts</div>
+            </section>
+        </div>
+
+        <div class = "row space"></div>
+
 
 
 
