--- a/index.html
+++ b/index.html
@@ -108,13 +108,20 @@
         </div>
 
         <div class = "row space"></div>
-
-
-
-
+        <div class = "row space"></div>
+        <div class = "row space"></div>
+        <div class = "row space"></div>
 
 
     </div>
+
+    <!-- Footer -->
+    <!-- TODO: Change Footer Text-->
+    <footer class="footer fixed-bottom bg-darkgreen">
+        <div class="container pb-2 pt-3 text-white">
+            <p class="text-center">Footer Text</p>
+        </div>
+    </footer>
 
 
 
