Add todo sections at the top of various sections in the html file, and remove extraneous comments in all files.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <nav class = "navbar navbar-expand-lg bg-deepblue navbar-dark">
 
-        <!-- TODO: Change navbar title -->
+        <!-- TODO: Change navbar title (and href if needed) -->
         <a class = "navbar-brand" href = "#">Navbar</a>
 
         <div class = "collapse navbar-collapse" id = "navbar-items">
@@ -55,11 +55,13 @@
     <div class = "row space"></div>
 
 
+    <!-- TODO: Add APIs and Links to all of the items below. -->
+
     <div class = "container">
 
         <div class = "row">
             <section class = "col-8">
-                <img src = "assets/images/placeholder.jpg" class = "img-fluid img-sizer" alt = "image">
+                <img src = "assets/images/placeholder.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image">
             </section>
 
             <section class = "col-1"></section>
@@ -76,11 +78,11 @@
 
         <div class = "row">
             <section class = "col-6">
-                <div class = "placeholder">Facebook Posts Will Go Here</div>
+                <div class = "placeholder" id = "facebook-posts">Facebook Posts Will Go Here</div>
             </section>
 
             <section class = "col-6">
-                <div class = "placeholder">Facebook Events Will Go Here</div>
+                <div class = "placeholder" id = "facebook-events">Facebook Events Will Go Here</div>
             </section>
         </div>
 
@@ -90,7 +92,7 @@
 
         <div class = "row">
             <section class = "col-12">
-                <div class = "placeholder">Youtube Content Will Go Here</div>
+                <div class = "placeholder" id = "youtube">Youtube Content Will Go Here</div>
             </section>
         </div>
 
@@ -99,11 +101,11 @@
 
         <div class = "row">
             <section class = "col-6">
-                <div class = "placeholder">Directions</div>
+                <div class = "placeholder" id = "directions">Directions</div>
             </section>
 
             <section class = "col-6">
-                <div class = "placeholder">Contacts</div>
+                <div class = "placeholder" id = "contacts">Contacts</div>
             </section>
         </div>
 
