Add jumbotron and change page title.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>North Hollywood Church</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -58,6 +58,12 @@
     <!-- TODO: Add APIs and Links to all of the items below. -->
 
     <div class = "container">
+
+        <div class = "jumbotron bg-blue text-center color-white">
+            <h1 class = "">North Hollywood Church</h1>
+            <p class = "lead">9936 Beachy Ave, Arleta, CA 91331</p>
+            <hr class = "my-4">
+        </div>
 
         <div class = "row">
             <section class = "col-8">
