Add Google Fonts to page and change title and body text to match these fonts.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
      <!-- Link to css file -->
      <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
- 
+
+     <!-- Link to Google Fonts -->
+     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+
      <!-- Link to Firebase -->
      <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 
@@ -59,7 +62,7 @@
 
     <div class = "container">
 
-        <div class = "jumbotron bg-blue text-center color-white">
+        <div class = "jumbotron bg-blue text-center color-white text-roboto">
             <h1 class = "">North Hollywood Church</h1>
             <p class = "lead">9936 Beachy Ave, Arleta, CA 91331</p>
             <hr class = "my-4">
@@ -72,7 +75,7 @@
 
             <section class = "col-1"></section>
 
-            <section class = "col-3 d-flex flex-column justify-content-around">
+            <section class = "col-3 d-flex flex-column justify-content-around text-robCondensed">
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div>
@@ -125,7 +128,7 @@
 
     <!-- Footer -->
     <!-- TODO: Change Footer Text-->
-    <footer class="footer fixed-bottom bg-darkgreen">
+    <footer class="footer fixed-bottom bg-darkgreen text-robCondensed">
         <div class="container pb-2 pt-3 text-white">
             <p class="text-center">Footer Text</p>
         </div>
