--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
 
         <div class = "row">
             <section class = "col-6">
-                <div class = "placeholder" id = "directions">Directions</div>
+                <div class = "placeholder" id = "directions">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3297.892448742396!2d-118.44335188509845!3d34.251287914662434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c290e2f53413c7%3A0x4698eb00389afb89!2s9936+Beachy+Ave%2C+Arleta%2C+CA+91331!5e0!3m2!1sen!2sus!4v1523733909343" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
             </section>
 
             <section class = "col-6">
