Display videos in a div with a scrollbar.

--- a/tests/YouTube/Me/yt-api.html
+++ b/tests/YouTube/Me/yt-api.html
@@ -26,9 +26,11 @@
         <div class = "row space"></div>
 
         <div class = "row">
-            <section class = "col-4"></section>
-            <section class = "col-4 d-flex flex-column justify-content-around" id = "videos"></section>
-            <section class = "col-4"></section>
+            <section class = "col-4 d-flex flex-column pre-scrollable" id = "videos">
+                <section class = "space"></section>
+            </section>
+            <section class = "col-4" id = "vid-display"></section>
+            <section class = "col-4" id = "vid-load"></section>
         </div>
     </div>
 
