Add button in html. Still need to add functionality.

--- a/tests/YouTube/Me/yt-api.html
+++ b/tests/YouTube/Me/yt-api.html
@@ -30,7 +30,9 @@
                 <section class = "space"></section>
             </section>
             <section class = "col-5" id = "vid-display"></section>
-            <section class = "col-3" id = "vid-load"></section>
+            <section class = "col-3">
+                <button type = "button" class = "btn btn-primary" id = "vid-load">Load More Videos</button>
+            </section>
         </div>
     </div>
 
