--- a/tests/YouTube/Me/yt-api.html
+++ b/tests/YouTube/Me/yt-api.html
@@ -32,6 +32,7 @@
             <section class = "col-5" id = "vid-display"></section>
             <section class = "col-3">
                 <button type = "button" class = "btn btn-primary" id = "vid-load">Load More Videos</button>
+                <section id = "load-message"></section>
             </section>
         </div>
     </div>
