--- a/tests/YouTube/Me/yt-api.html
+++ b/tests/YouTube/Me/yt-api.html
@@ -26,13 +26,21 @@
         <div class = "row space"></div>
 
         <div class = "row">
-            <section class = "col-4 d-flex flex-column pre-scrollable" id = "videos">
-                <section class = "space"></section>
-            </section>
-            <section class = "col-5" id = "vid-display"></section>
-            <section class = "col-3">
+            <section class = "col-md-4">
+
                 <button type = "button" class = "btn btn-primary" id = "vid-load">Load More Videos</button>
                 <section id = "load-message"></section>
+
+                <section class = "space"></section>
+
+                <section class = "d-flex flex-column pre-scrollable" id = "videos">
+                    <section class = "space"></section>
+                </section>
+
+            </section>
+            
+            <section class = "col-md-8" id = "vid-display"></section>
+            <!-- <section class = "col-md-3"> -->
             </section>
         </div>
     </div>
