Make divs responsive.

--- a/tests/YouTube/Me/yt-api.html
+++ b/tests/YouTube/Me/yt-api.html
@@ -39,7 +39,10 @@
 
             </section>
             
-            <section class = "col-md-8" id = "vid-display"></section>
+            <section class = "col-md-1 space"></section>
+            <section class = "col-md-1 space"></section>
+
+            <section class = "col-md-6" id = "vid-display"></section>
             <!-- <section class = "col-md-3"> -->
             </section>
         </div>
