Add a youtube.js file and add a link to the file in index.html.

--- a/index.html
+++ b/index.html
@@ -100,9 +100,30 @@
         <div class = "row space"></div>
 
         <div class = "row">
-            <section class = "col-12">
+            <!-- <section class = "col-12">
                 <div class = "placeholder" id = "youtube">Youtube Content Will Go Here</div>
+            </section> -->
+
+            <section class = "col-md-4">
+
+                <button type = "button" class = "btn btn-primary" id = "vid-load">Load More Videos</button>
+                <section id = "load-message"></section>
+
+                <section class = "space"></section>
+
+                <section class = "d-flex flex-column pre-scrollable" id = "videos">
+                    <section class = "space"></section>
+                </section>
+
             </section>
+            
+            <section class = "col-md-1 space"></section>
+            <section class = "col-md-1 space"></section>
+
+            <section class = "col-md-6" id = "vid-display"></section>
+            <!-- <section class = "col-md-3"> -->
+            </section>
+
         </div>
 
         <div class = "row space"></div>
@@ -142,5 +163,7 @@
 
     <!-- Link to JavaScript -->
     <script type = "text/javascript" src = "assets/javascript/app.js"></script>
+
+    <script type = "text/javascript" src = "assets/javascript/youtube.js">
 </body>
 </html>
