--- a/tests/YouTube/Me/yt-api.html
+++ b/tests/YouTube/Me/yt-api.html
@@ -25,7 +25,7 @@
 
         <div class = "row space"></div>
 
-        <div class = "row">
+        <div class = "row align-items-center">
             <section class = "col-md-4">
 
                 <button type = "button" class = "btn btn-primary" id = "vid-load">Load More Videos</button>
