--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
      <!-- Link to css file -->
      <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
 
+     <link rel = "stylesheet" type = "text/css" href = "assets/css/youtube.css">
+
      <!-- Link to Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
 
@@ -99,7 +101,7 @@
         <div class = "row space"></div>
         <div class = "row space"></div>
 
-        <div class = "row">
+        <div class = "row align-items-center">
             <!-- <section class = "col-12">
                 <div class = "placeholder" id = "youtube">Youtube Content Will Go Here</div>
             </section> -->
@@ -164,6 +166,6 @@
     <!-- Link to JavaScript -->
     <script type = "text/javascript" src = "assets/javascript/app.js"></script>
 
-    <script type = "text/javascript" src = "assets/javascript/youtube.js">
+    <script type = "text/javascript" src = "assets/javascript/youtube.js"></script>
 </body>
 </html>
