Properly size video display.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class = "placeholder" id = "youtube">Youtube Content Will Go Here</div>
             </section> -->
 
-            <section class = "col-md-4">
+            <section class = "col-lg-4">
 
                 <button type = "button" class = "btn btn-primary" id = "vid-load">Load More Videos</button>
                 <section id = "load-message"></section>
@@ -119,10 +119,10 @@
 
             </section>
             
-            <section class = "col-md-1 space"></section>
-            <section class = "col-md-1 space"></section>
+            <!-- <section class = "col-lg-1 space"></section> -->
+            <section class = "col-lg-1 space"></section>
 
-            <section class = "col-md-6" id = "vid-display"></section>
+            <section class = "col-lg-7" id = "vid-display"></section>
             <!-- <section class = "col-md-3"> -->
             </section>
 
