Add googlemaps.js file, put links to relevant google maps files in index.html.

--- a/index.html
+++ b/index.html
@@ -163,9 +163,17 @@
     <!-- Link to jQuery -->
     <script type = "text/javascript" src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-    <!-- Link to JavaScript -->
+    <!-- Link to Google Maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlvNNu33wLTWD5g2DwWs61iWawPsb5fPM&libraries=places&callback=init"
+    async defer></script>
+
+    <!-- Link to JavaScript file -->
     <script type = "text/javascript" src = "assets/javascript/app.js"></script>
 
+    <!-- Link to youtube.js -->
     <script type = "text/javascript" src = "assets/javascript/youtube.js"></script>
+
+    <!-- Link to googlemaps.js -->
+    <script type = "text/javascript" src = "assets/javascript/googlemaps.js"></script>
 </body>
 </html>
