--- a/index.html
+++ b/index.html
@@ -168,7 +168,16 @@
                     <div id="map"></div>
                 </div>
             </div>
+
+            <div class = "col-md-6">
+                <!--detail direction panel-->
+                <div id = "instructionHolder">
+                    <div id="bottom-panel" class = "pre-scrollable"></div>
+                </div>
+            </div>
         </div>
+
+        
 
         <div class = "row space"></div>
         <div class = "row space"></div>
