--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>North Hollywood Church</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <!-- <script src="main.js"></script> -->
 
      <!-- Link to Bootstrap-->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -164,7 +164,7 @@
     <script type = "text/javascript" src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <!-- Link to JavaScript -->
-    <script type = "text/javascript" src = "assets/javascript/app.js"></script>
+    <!-- <script type = "text/javascript" src = "assets/javascript/app.js"></script> -->
 
     <script type = "text/javascript" src = "assets/javascript/youtube.js"></script>
 </body>
