--- a/index.html
+++ b/index.html
@@ -78,9 +78,21 @@
             <section class = "col-1"></section>
 
             <section class = "col-3 d-flex flex-column justify-content-around text-robCondensed">
-                <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
+                <!-- <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
-                <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div>
+                <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div> -->
+                <div id = "google-icon">
+                    <img src = "assets/images/google-icon.png" class = "icon-sizer">
+                </div>
+
+                <div id = "facebook-icon">
+                    <img src = "assets/images/fb-icon.png" class = "icon-sizer">
+                </div>
+
+                <div id = "login-icon">
+                    <img src = "assets/images/login-icon.jpg" class = "icon-sizer">
+                </div>
+
             </section>
         </div>
 
