Add scrollbar to facebook posts.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class = "placeholder" id = "facebook-events">Facebook Events Will Go Here</div>
             </section> -->
 
-            <section class = "col-12">
+            <section class = "col-12 pre-scrollable" id = "post-holder">
                 <!-- <div id="showPage">
                     <div id="showPost"></div>
                 </div>    -->
