--- a/index.html
+++ b/index.html
@@ -30,36 +30,8 @@
 
 <body>
 
-    <nav class = "navbar navbar-expand-lg bg-deepblue navbar-dark">
 
-        <!-- TODO: Change navbar title (and href if needed) -->
-        <a class = "navbar-brand" href = "#">Navbar</a>
-
-        <div class = "collapse navbar-collapse" id = "navbar-items">
-
-            <!-- The following contains the navbar links. -->
-            <!-- If any of the navbar items are not needed, then just comment this section out. -->
-            <!-- TODO: Change names of navbar items and provide working links to the items by changing the "href" section. -->
-
-            <ul class = "navbar-nav mr-auto">
-
-                <li class = "nav-item" id = "link-1">
-                    <a class = "nav-link" href = "#">Link 1</a>
-                </li>
-
-                <li class = "nav-item" id = "link-2">
-                    <a class = "nav-link" href = "#">Link 2</a>
-                </li>
-
-                <li class = "nav-item" id = "link-3">
-                    <a class = "nav-link" href = "#">Link 3</a>
-                </li>
-
-            </ul>
-        </div>
-    </nav>
-
-    <div class = "row space"></div>
+    <!-- <div class = "row space"></div> -->
     <div class = "row space"></div>
 
 
