--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <div class = "container">
 
-        <div class = "jumbotron bg-blue text-center color-white text-roboto">
-            <h1 class = "">North Hollywood Church</h1>
+        <div class = "jumbotron bg-blue text-center color-white text-roboto header">
+            <h1 class = "display-3" style = "font-weight: bold">North Hollywood Church</h1>
             <p class = "lead">9936 Beachy Ave, Arleta, CA 91331</p>
             <hr class = "my-4">
         </div>
