--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 </head>
 
 
-<body class = "bg">
+<!-- <body class = "bg"> -->
+<body>
 
 
     <!-- <div class = "row space"></div> -->
@@ -168,13 +169,7 @@
 
     </div>
 
-    <!-- Footer -->
-    <!-- TODO: Change Footer Text-->
-    <footer class="footer fixed-bottom bg-darkgreen text-robCondensed">
-        <div class="container pb-2 pt-3 text-white">
-            <p class="text-center">Footer Text</p>
-        </div>
-    </footer>
+    
 
 
 
