Change color of container div and add a border.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
     <div class = "container">
 
+        <div class = "row space"></div>
+
+
         <div class = "jumbotron bg-blue text-center color-white text-roboto header">
             <h1 class = "display-3" style = "font-weight: bold">North Hollywood Church</h1>
             <p class = "lead">9936 Beachy Ave, Arleta, CA 91331</p>
@@ -163,8 +166,8 @@
 
         <div class = "row space"></div>
         <div class = "row space"></div>
-        <div class = "row space"></div>
-        <div class = "row space"></div>
+        <!-- <div class = "row space"></div>
+        <div class = "row space"></div> -->
 
 
     </div>
