Add necessary files for google authentication.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,13 @@
 
     <!-- Link to googlemaps.js -->
     <script type = "text/javascript" src = "assets/javascript/googlemaps.js"></script>
+
+    <!-- Link to facebook.js -->
     <script type = "text/javascript" src = "assets/javascript/facebook.js"></script>
+
+    <!-- Link to Google Authentication -->
+    <script src="assets/javascript/googleAuth.js"></script>
+
 
 </body>
 </html>
