--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                 <!-- <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div> -->
-                <div id = "google-icon">
-                    <img src = "assets/images/google-icon.png" class = "icon-sizer">
+                <div id = "google-icon googleBtn" class="major-provider btn _block _medium _google">
+                    <a href = "#">
+                        <img src = "assets/images/google-icon.png" class = "icon-sizer">
+                    </a>
                 </div>
 
                 <div id = "facebook-icon">
