--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class = "row">
             <section class = "col-8">
                 <!-- <img src = "assets/images/placeholder.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image"> -->
-                <img src = "assets/images/church.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image">
+                <img src = "assets/images/Church.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image">
             </section>
 
             <section class = "col-1"></section>
@@ -63,16 +63,16 @@
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div> -->
                 <div id = "google-icon googleBtn" class="major-provider btn _block _medium _google">
                     <a href = "#">
-                        <img src = "assets/images/google-icon.png" class = "icon-sizer">
+                        <img src = "assets/images/google-icon.png" class = "icon-sizer" id="googleSignIn">
                     </a>
                 </div>
 
                 <div id = "facebook-icon">
-                    <img src = "assets/images/fb-icon.png" class = "icon-sizer">
+                    <img src = "assets/images/fb-icon.png" class = "icon-sizer" id="facebookSignIn">
                 </div>
 
                 <div id = "login-icon">
-                    <img src = "assets/images/login-icon.jpg" class = "icon-sizer">
+                    <img src = "assets/images/login-icon.jpg" class = "icon-sizer" id="loginButton">
                 </div>
 
             </section>
@@ -186,11 +186,6 @@
 
     </div>
 
-    
-
-
-
-
     <!-- Link to jQuery -->
     <script type = "text/javascript" src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
@@ -203,10 +198,8 @@
     <!-- Link to JavaScript -->
     <!-- <script type = "text/javascript" src = "assets/javascript/app.js"></script> -->
 
-
     <!-- Link to youtube.js -->
     <script type = "text/javascript" src = "assets/javascript/youtube.js"></script>
-
 
     <!-- Link to googlemaps.js -->
     <script type = "text/javascript" src = "assets/javascript/googlemaps.js"></script>
