--- a/firebase.html
+++ b/firebase.html
@@ -6,14 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-auth.js"></script>
-    
+    <!-- <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+        crossorigin="anonymous"></script> -->
 </head>
 <body>
     <h1>
-        Time 07:25
+        Time 09:00
     </h1>
     <div >
             <div class="mt-3">
@@ -25,9 +29,10 @@
                     <input type="password" id="passwordLogin"> 
             </div>
     </div>
-   
+    <!--  -->
+        <div>
             <input type="button" id="login" class="btn btn-action" value="Log In">
-            <input type="button" id="SignUp" class="btn btn-secondary" value="Sign Up">
+            <input type="button" id="submitSignUn" class="btn btn-secondary" value="Sign Up">
             <input type="button" id="LogOut"  class="btn btn-action hide"  value="Log Out">
         </div>
         <div id="userStatusDiv">
@@ -35,7 +40,8 @@
         </div>
         <!-- End Login with username and password -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/app1.js"></script>
+    <!-- <script src="assets/javascript/test2.js"></script> -->
+        <script src = "assets/javascript/firebase.js"></script>
     
 </body>
 </html>
