--- a/firebase.html
+++ b/firebase.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-auth.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
@@ -16,9 +16,7 @@
         crossorigin="anonymous"></script> -->
 </head>
 <body>
-    <h1>
-        Time 09:00
-    </h1>
+ 
     <div >
             <div class="mt-3">
                     <label for="username">User Name: </label>
