--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                 </div>
 
                 <div id = "facebook-icon">
-                    <img src = "assets/images/fb-icon.png" class = "icon-sizer" id="facebookSignIn">
+                    <button onclick="checkLoginState()">
+                    <img src = "assets/images/fb-icon.png" class = "icon-sizer">
+                    </button>
                 </div>
 
                 <div id = "login-icon">
