--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 </div>
 
                 <div id = "facebook-icon">
-                    <button onclick="checkLoginState()">
+                    <a href="#" onclick="checkLoginState();">
                     <img src = "assets/images/fb-icon.png" class = "icon-sizer">
-                    </button>
+                    </a>
                 </div>
 
                 <div id = "login-icon">
