--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                 <!-- <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div> -->
+                <!--welcome user message after logged in-->
+                <div id="welcome"></div>
                 <div id = "google-icon googleBtn" class="major-provider btn _block _medium _google">
                     <a href = "#">
                         <img src = "assets/images/google-icon.png" class = "icon-sizer" id="googleSignIn">
