--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 
                 <!--Ngoc added Google Login button-->
                 <div id="gSignInWrapper">
-                    <span class="label">Sign in with:</span>
+                    <span class="label"></span>
                     <div id="customBtn" class="customGPlusSignIn">
                       <span class="icon"></span>
                       <span class="buttonText">Google</span>
