--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
      <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
      <!--Ngoc added-->
      <link rel = "stylesheet" type = "text/css" href = "assets/css/googlebutton.css">
+     <script src="https://apis.google.com/js/platform.js" async defer></script>
+     <meta name="google-signin-client_id" content="1005294506678-b1a6t3jm3r5a3g4l6p0itdfksqbfdtga.apps.googleusercontent.com">
    
      <link rel = "stylesheet" type = "text/css" href = "assets/css/youtube.css">
 
