--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <span class="label"></span>
                     <div id="customBtn" class="customGPlusSignIn">
                       <span class="icon"></span>
-                      <span class="buttonText">Google</span>
+                      <span class="buttonText">Login with Google</span>
                     </div>
                 </div>
                 
