--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
 
     <!-- Link to Google Authentication -->
     <script src="assets/javascript/googleAuth.js"></script>
+    
+     <!-- Link to Custom Authentication -->
+    <script src="assets/javascript/customAuth.js"></script>
 
 
 </body>
