--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
      <!-- Link to Firebase -->
      <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-auth.js"></script>
 
 </head>
 
