--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class = "row">
-            <section class = "col-8">
+            <section class = "col-12 col-md-8">
                 <!-- <img src = "assets/images/placeholder.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image"> -->
                 <img src = "assets/images/Church.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image">
             </section>
