--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <section class = "col-1"></section>
 
-            <section class = "col-3 d-flex flex-column justify-content-around text-robCondensed">
+            <section class = "col-md-3 col-12 d-flex flex-column justify-content-around text-robCondensed">
                 <!-- <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div> -->
