--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         </div>
 
         <div class = "row">
-            <section class = "col-12 col-md-8">
+            <section class = "col-12 mb-1 col-md-8">
                 <!-- <img src = "assets/images/placeholder.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image"> -->
                 <img src = "assets/images/Church.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image">
             </section>
 
             <section class = "col-1"></section>
 
-            <section class = "col-md-3 col-12 d-flex flex-column justify-content-around text-robCondensed">
+            <section class = "col-md-3 col-12 mb-1 d-flex flex-column justify-content-around text-robCondensed">
                 <!-- <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div> -->
