--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         </div>
 
         <div class = "row">
-            <section class = "col-12 mb-1 col-md-8">
+            <section class = "col-12 col-md-8">
                 <!-- <img src = "assets/images/placeholder.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image"> -->
                 <img src = "assets/images/Church.jpg" class = "img-fluid img-sizer" alt = "image" id = "church-image">
             </section>
 
             <section class = "col-1"></section>
 
-            <section class = "col-md-3 col-12 mb-1 d-flex flex-column justify-content-around text-robCondensed">
+            <section class = "col-md-3 col-12 d-flex flex-column justify-content-around text-robCondensed">
                 <!-- <div class = "rounded-circle bg-lightblue color-white circle-sizer-2" id = "bible-search">Bible Search</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "reg-schedule">Regular Schedule</div>
                 <div class = "rounded-circle bg-lightblue color-white circle-sizer" id = "peers">Peers</div> -->
@@ -90,7 +90,7 @@
                 
                 
                 <!--Ngoc added Facebook Login button-->
-                <div class="fb-login-button" data-max-rows="1" data-size="large"  
+                <div class="fb-login-button mt-1" data-max-rows="1" data-size="large"  
                      data-show-faces="false" data-auto-logout-link="false" 
                      data-use-continue-as="false">
                 </div>
