Add Google icon to Google Login button.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 <div id="gSignInWrapper">
                     <span class="label"></span>
                     <div id="customBtn" class="customGPlusSignIn">
-                      <span class="icon"></span>
+                      <span class="icon">
+                          <img id = "google-icon" src = "assets/images/g-normal.png">
+                      </span>
                       <span class="buttonText">Login with Google</span>
                     </div>
                 </div>
