--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- TODO: Add APIs and Links to all of the items below. -->
 
-    <div class = "container">
+    <div class = "container px-4">
 
         <div class = "row space"></div>
 
